--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<input id="x" type="text">
 		<input id="y" type="text">
 		<input id="add" type="button" value="Add Numbers">
+		<input id="multiply" type="button" value="Multiply Numbers">
 		Result: <span id="result" />
 		<script type="text/javascript" src="lib/calculator.js"></script>
 		<script>
