--- a/test/calculator.fixture.html
+++ b/test/calculator.fixture.html
@@ -1,4 +1,5 @@
 <input id="x" type="text">
 <input id="y" type="text">
 <input id="add" type="button" value="Add Numbers">
+<input id="minus" type="button" value="Subtract Numbers">
 Result: <span id="result" />
