--- a/test/calculator.fixture.html
+++ b/test/calculator.fixture.html
@@ -2,4 +2,5 @@
 <input id="y" type="text">
 <input id="add" type="button" value="Add Numbers">
 <input id="multiply" type="button" value="Multiply Numbers">
+<input id="power" type="button" value="Who has the power">
 Result: <span id="result" />
