--- a/test/calculator.fixture.html
+++ b/test/calculator.fixture.html
@@ -3,4 +3,5 @@
 <input id="add" type="button" value="Add Numbers">
 <input id="multiply" type="button" value="Multiply Numbers">
 <input id="minus" type="button" value="Subtract Numbers">
+<input id="divide" type="button" value="Divide Numbers">
 Result: <span id="result" />
