added comma seperated list

--- a/test/calculator.fixture.html
+++ b/test/calculator.fixture.html
@@ -3,4 +3,6 @@
 <input id="add" type="button" value="Add Numbers">
 <input id="multiply" type="button" value="Multiply Numbers">
 <input id="minus" type="button" value="Subtract Numbers">
+<input id="comma-separate" type="button" value="Comma Separate">
+
 Result: <span id="result" />
