--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		<input id="add" type="button" value="Add Numbers">
 		<input id="minus" type="button" value="Subtract Numbers">
 		<input id="multiply" type="button" value="Multiply Numbers">
+		<input id="comma-separate" type="button" value="Comma Separate">
+
 		Result: <span id="result" />
 		<script type="text/javascript" src="lib/calculator.js"></script>
 		<script>
