--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 		<input id="x" type="text">
 		<input id="y" type="text">
 		<input id="add" type="button" value="Add Numbers">
+		<input id="minus" type="button" value="Subtract Numbers">
+		<input id="multiply" type="button" value="Multiply Numbers">
+		<input id="power" type="button" value="Who has the power">
+		<input id="divide" type="button" value="Divide Numbers">
+		<input id="comma-separate" type="button" value="Comma Separate">
+
 		Result: <span id="result" />
 		<script type="text/javascript" src="lib/calculator.js"></script>
 		<script>
